--- a/About-us.HTML
+++ b/About-us.HTML
@@ -39,140 +39,159 @@
             <a href="Blog.html" class="nav-link">Blogs</a>
           </li>
           <li class="nav-item">
-              <a href="blog-detail.html" class="nav-link">Blog Detail</a>
+            <a href="blog-detail.html" class="nav-link">Blog Detail</a>
           </li>
           <li class="nav-item">
             <a href="about-us.html" class="nav-link">About Us</a>
-        </li>
-        <li class="nav-item">
-          <a href="contact.html" class="nav-link">Contact Us</a>
-      </li>
+          </li>
+          <li class="nav-item">
+            <a href="contact.html" class="nav-link">Contact Us</a>
+          </li>
         </ui>
       </div>
     </div>
   </nav>
   <div class="container">
     <div class="row pt-5 pb-5">
-    <div class="col-md-8 text-dark">  
-       <section class="" itemprop="articleBody">
-       <h2>Our Vision</h2>
-       <p><strong><em>A Culture of Aging that is Life-Affirming, Satisfying, Humane and Meaningful</em></strong></p>
-      <p>Pioneer Network supports models where elders live in open, diverse, caring communities. In-depth change in systems requires change in governmental policy and regulation; change in the individual’s and society’s attitudes toward aging and elders; change in elders’ attitudes towards themselves and their aging; and change in the attitudes and behavior of caregivers toward those for whom they care. We refer to this work as culture change. Our aim is nothing less than transforming the culture of aging in America.</p>
-      <h2>Our Mission</h2>
-      <p><em><strong>Empowering a network of senior living and care communities by fostering person-directed practices and environments.</strong></em></p>
-      <h2>Credo</h2>
-      <p>Growing older presents limitless opportunities to pursue joy and meaning wherever we call community. Aging is the path to life-long learning, growth and connection regardless of changes we face. Pioneer Network is working to bury stereotypical views and combat ageism. Helping others understand and experience life in a fulfilling way creates a culture of care and support we all desire. Let’s celebrate the virtues of aging together!</p>
-      <h2>Our Values and Principles</h2>
-      <ul style="list-style-type: disc;">
-      <li>Know each person</li>
-      <li>Each person can and does make a difference</li>
-      <li>Relationship is the fundamental building block of a transformed culture</li>
-      <li>Respond to spirit, as well as mind and body</li>
-      <li>Risk taking is a normal part of life</li>
-      <li>Put person before task</li>
-      <li>All elders are entitled to self-determination wherever they live</li>
-      <li>Community is the antidote to institutionalization</li>
-      <li>Do unto others as you would have them do unto you</li>
-      <li>Promote the growth and development of all</li>
-      <li>Shape and use the potential of the environment in all its aspects: physical, organizational, psycho/social/spiritual</li>
-      <li>Practice self-examination, searching for new creativity and opportunities for doing better</li>
-      <li>Recognize that culture change and transformation are not destinations but a journey, always a work in progress</li>
+      <div class="col-md-8 text-dark">
+        <section class="" itemprop="articleBody">
+          <h2>Our Vision</h2>
+          <p><strong><em>A Culture of Aging that is Life-Affirming, Satisfying, Humane and Meaningful</em></strong></p>
+          <p>Pioneer Network supports models where elders live in open, diverse, caring communities. In-depth change in
+            systems requires change in governmental policy and regulation; change in the individual’s and society’s
+            attitudes toward aging and elders; change in elders’ attitudes towards themselves and their aging; and
+            change in the attitudes and behavior of caregivers toward those for whom they care. We refer to this work as
+            culture change. Our aim is nothing less than transforming the culture of aging in America.</p>
+          <h2>Our Mission</h2>
+          <p>Empowering a network of senior living and care communities by fostering person-directed practices and
+            environments.</p>
+          <h2>Credo</h2>
+          <p>Growing older presents limitless opportunities to pursue joy and meaning wherever we call community. Aging
+            is the path to life-long learning, growth and connection regardless of changes we face.
+            Pioneer Network is working to bury stereotypical views and combat ageism. Helping others understand and
+            experience life in a fulfilling way creates a culture of care and support we all desire.
+            Let’s celebrate the virtues of aging together!</p>
+          <h2>Our Values and Principles</h2>
+          <ul style="list-style-type: disc;">
+            <li>Know each person</li>
+            <li>Each person can and does make a difference</li>
+            <li>Relationship is the fundamental building block of a transformed culture</li>
+            <li>Respond to spirit, as well as mind and body</li>
+            <li>Risk taking is a normal part of life</li>
+            <li>Put person before task</li>
+            <li>All elders are entitled to self-determination wherever they live</li>
+            <li>Community is the antidote to institutionalization</li>
+            <li>Do unto others as you would have them do unto you</li>
+            <li>Promote the growth and development of all</li>
+            <li>Shape and use the potential of the environment in all its aspects: physical, organizational,
+              psycho/social/spiritual</li>
+            <li>Practice self-examination, searching for new creativity and opportunities for doing better</li>
+            <li>Recognize that culture change and transformation are not destinations but a journey, always a work in
+              progress</li>
 
-    </div>
-    <div class="col-md-4 pl-5 text-dark ">
-<img src="https://images.unsplash.com/photo-1497215641119-bbe6d71ebaae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG51dHJpb25zJTIwb2ZmaWNlJTIwaW1hZ2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60" alt="feature image" class="img-fluid rounded-custom">
+      </div>
+      <div class="col-md-4 pl-5 text-dark ">
+        <img
+          src="https://images.unsplash.com/photo-1497215641119-bbe6d71ebaae?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MTl8fG51dHJpb25zJTIwb2ZmaWNlJTIwaW1hZ2V8ZW58MHx8MHx8&auto=format&fit=crop&w=500&q=60"
+          alt="feature image" class="img-fluid rounded-custom">
 
-    </div>
-  </div>
-</div>      
-</ul>
-      </section>
-
-</div>
-
-</div>
-
-<!-- FOOTER -->
-<footer id="main-footer" class="bg-gradient">
-<div class="container">
-  <div class="row">
-  <div class="col-md-4 text-center p-5 ">
-      <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
-        "Your personal Nutritionist"
-      </p>
-    </div>
-    <div class="col-md-7 p-5">
-      <div class="row">
-        <div class="col-md-4">
-          <ul>
-            <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
-            <li><a href="faq.html" class="text-light">FAQ</a></li>
-            <li><a href="blog-detail.html" class="text-light">Terms</a></li>
-          </ul>
-        </div>
-        <div class="col-md-4">
-          <ul>
-            <li class="">+8615579101089</li>
-            <li class="">Nanchang(JIANGXI)</li>
-            <li class="">University of technology</li>
-          </ul>
-        </div>
       </div>
     </div>
   </div>
-</div>
-</footer>
+  </ul>
+  </section>
 
+  </div>
 
-<!-- CONTACT MODAL -->
-<div class="modal fade text-light"  id="contact_modal">
-<div class="modal-dialog" role="document">
-  <div class="modal-content">
-    <div class="modal-header bg-green">
-      <h5 class="modal-title">Modal title</h5>
-      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
-      </button>
-    </div>
-    <div class="modal-body bg-green">
+  </div>
+
+  <!-- FOOTER -->
+  <footer id="main-footer" class="bg-gradient">
+    <div class="container">
       <div class="row">
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="name">Name</label>
-            <input type="text" class="form-control">
-          </div>
+        <div class="col-md-4 text-center p-5 ">
+          <p>YOUR GUIDE TO A HEALTHY LIFE STYLE
+            "Your personal Nutritionist"
+          </p>
         </div>
-        <div class="col-md-6">
-          <div class="form-group">
-            <label for="email">Email</label>
-            <input type="email" class="form-control">
-          </div>
-        </div>
-        <div class="col-md-12">
-          <div class="form-group">
-            <label for="message">Message</label>
-            <textarea class="form-control"></textarea>
+        <div class="col-md-7 p-5">
+          <div class="row">
+            <div class="col-md-4">
+              <ul>
+                <li><a href="why_zhiyu.html" class="text-light">Career</a></li>
+                <li><a href="faq.html" class="text-light">FAQ</a></li>
+                <li><a href="blog-detail.html" class="text-light">Terms</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <ul>
+                <li class="">+8615579101089</li>
+                <li class="">Nanchang(JIANGXI)</li>
+                <li class="">University of technology</li>
+              </ul>
+            </div>
           </div>
         </div>
       </div>
     </div>
-    <div class="modal-footer bg-green">
-      <button type="button" class="btn ">Save changes</button>
-      <button type="button" class="btn" data-dismiss="modal">Close</button>
+  </footer>
+
+
+  <!-- CONTACT MODAL -->
+  <div class="modal fade text-light" id="contact_modal">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header bg-green">
+          <h5 class="modal-title">Modal title</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body bg-green">
+          <div class="row">
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="name">Name</label>
+                <input type="text" class="form-control">
+              </div>
+            </div>
+            <div class="col-md-6">
+              <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" class="form-control">
+              </div>
+            </div>
+            <div class="col-md-12">
+              <div class="form-group">
+                <label for="message">Message</label>
+                <textarea class="form-control"></textarea>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="modal-footer bg-green">
+          <button type="button" class="btn ">Save changes</button>
+          <button type="button" class="btn" data-dismiss="modal">Close</button>
+        </div>
+      </div>
     </div>
   </div>
-</div>
-</div>
 
 
 
-<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-<script>
-// Get the current year for the copyright
-$('#year').text(new Date().getfullyear());
+  <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
+    integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script>
+    // Get the current year for the copyright
+    $('#year').text(new Date().getfullyear());
 
-// init Scrollspy
-$('body').scrollspy({ target: 'main-nav'});
-</script>
+    // init Scrollspy
+    $('body').scrollspy({ target: 'main-nav' });
+  </script>
